Sign up and log in interfaces created

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://iamccdev:@cluster0.xgfdm.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://iamccdev:Trolaso1928@cluster0.xgfdm.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5001
 JWT_KEY=mysecretkey
 NODE_ENV=development
