--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "start": "npm run start --prefix backend"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
